<?xml version="1.0"?>
<package format="3">
  <name>gesture_mouse</name>
  <version>0.2.0</version>
  <description>Webcam gesture-controlled virtual mouse with ROS 2 integration</description>
  <maintainer email="jruzek@todo.todo">jruzek</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>